--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,22 @@
+
 <!doctype html>
-<html lang="en">
+<html>
 <head>
   <meta charset="utf-8">
+
   <title>AngularBookstore</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-   <script src="https://code.jquery.com/jquery-2.2.3.js"></script>
+  
+  
+  <script src="https://code.jquery.com/jquery-2.2.3.js"></script>
+
 </head>
 <body>
-  <app-root></app-root>
+  <app-root>showLoading...</app-root>
 </body>
 </html>
+
+
